syntax = "proto3";

package post_db;

option go_package="github.com\\Arailym2002talgatkyzu\\final-project\\post_db\\postpb;postpb";

message Post {
  int32 id = 1;
  int32 authorid=2;
  string authorname = 3;
  string title = 4;
  string article = 5;
  string published = 6;
}

message getPostsRequest { }

message getPostsResponse {
  Post post = 1;
}

message getPostRequest {
  int32 id = 1;
}

message getPostResponse {
  Post post = 1;
  string result = 2;
}

message insertPostRequest {
  Post post = 1;
}

message insertPostResponse {
  int32 id = 1;
  string result = 2;
}

message deletePostRequest {
  int32 id = 1;
}

message deletePostResponse {
  string result = 1;
}

message updatePostRequest {
  Post post = 1;
}

message updatePostResponse {
  int32 id = 1;
  string result = 2;
}


service PostService {
  rpc GetPosts(getPostsRequest) returns (stream getPostsResponse) {};
  rpc GetPost(getPostRequest) returns (getPostResponse) {};
  rpc InsertPost(insertPostRequest) returns (insertPostResponse) {};
  rpc DeletePost(deletePostRequest) returns (deletePostResponse) {};
  rpc UpdatePost(updatePostRequest) returns (updatePostResponse) {};
}